removed the tiles (the Genericb locks of "Elements" "Generic" and "Landing" in the home page)

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -13,6 +13,7 @@
     {% include header.html %}
 
     <!-- Banner -->
+    <!-- Shamel: This is the main part of the  -->
     <section id="banner" class="major">
         <div class="inner">
             <header class="major">
@@ -29,9 +30,6 @@
 
     <!-- Main -->
     <div id="main">
-
-        <!-- One -->
-        {% include tiles.html %}
 
         <!-- Two -->
         <section id="two">
