--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -13,7 +13,7 @@
     {% include header.html %}
 
     <!-- Banner -->
-    <!-- Shamel: This is the main part of the  -->
+    <!-- Shamel: This is the main part of the home page -->
     <section id="banner" class="major">
         <div class="inner">
             <header class="major">
@@ -22,7 +22,8 @@
             <div class="content">
                 <p style="text-transform: uppercase;">{{ site.description }}</p>
                 <ul class="actions">
-                    <li><a href="#one" class="button next scrolly">Get Started</a></li>
+                    <li><a href="about.html" class="button next scrolly">About Me</a></li>
+                    <!-- Shamel: This botton is not working for now -->
                 </ul>
             </div>
         </div>
@@ -35,11 +36,11 @@
         <section id="two">
             <div class="inner">
                 <header class="major">
-                    <h2>Massa libero</h2>
+                    <h2>Services</h2>
                 </header>
-                <p>{{ content }}</p>
+                <p>We offer multiple services ranging from this to that. </p>
                 <ul class="actions">
-                    <li><a href="landing.html" class="button next">Get Started</a></li>
+                    <li><a href="services.html" class="button next">Services</a></li>
                 </ul>
             </div>
         </section>
